# diskscape

./: CMakeLists.txt  README.md  TRANSLATE.md  resources.qrc
packaging/: PKGBUILD  io.github.dvdavd.Diskscape.desktop.in  io.github.dvdavd.Diskscape.metainfo.xml  io.github.dvdavd.Diskvu.desktop.in  io.github.dvdavd.Diskvu.metainfo.xml  io.github.dvdavd.Diskvu.yml
packaging/macos/: Info.plist.in
packaging/windows/: installer.nsi.in
src/: breadcrumbpathbar.cpp  breadcrumbpathbar.h  colorutils.cpp  colorutils.h  filenode.h  filesystemutils.cpp  filesystemutils.h  filesystemwatchcontroller.cpp  filterparams.h  iconutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_landing.cpp  mainwindow_types.h  mainwindow_utils.cpp  mainwindow_utils.h  nodepropertiesdialog.cpp  platformthemewatcher.cpp  platformthemewatcher.h  scanner.cpp  scanner.h  scanner_bench.cpp  scanner_common.h  scanner_posix.cpp  scanner_std.cpp  scanner_win32.cpp  searchfilterpanel.cpp  searchfilterpanel.h  settingsdialog.cpp  settingsdialog.h  svgutils.cpp  svgutils.h  thumbnailprovider.h  thumbnailprovider_macos.mm  thumbnailprovider_posix.cpp  thumbnailprovider_win32.cpp  treemap_drawing.cpp  treemap_drawing.h  treemapsettings.cpp  (+5 more)
tests/: test_breadcrumbpathbar.cpp  test_drawing.cpp  test_filenode.cpp  test_filesystemutils.cpp  test_filesystemwatchcontroller.cpp  test_icons.cpp  test_refresh.cpp  test_scanner.cpp  test_search.cpp  test_searchfilterpanel.cpp  test_settings.cpp  test_settingsdialog.cpp  test_subtree_refresh_paths.cpp
translations/: diskscape_en_US.ts  diskvu_en_US.qm  diskvu_en_US.ts
